--- a/AN597_GroupProject_LLMC.Rmd
+++ b/AN597_GroupProject_LLMC.Rmd
@@ -11,8 +11,24 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Christian is the coolest member of this group!
 
+Packages we need: 
+```{r}
+library(curl)
+library(MASS)
+library(candisc)
+```
+
+
 ```{r}
 f <- curl("https://raw.githubusercontent.com/fuzzyatelin/fuzzyatelin.github.io/master/AN597_Fall19/KamilarAndCooperData.csv")
 d <- read.csv(f, header = TRUE, sep = ",", stringsAsFactors = TRUE)
 head(d)
 ```
+
+LDA
+```{r}
+r <- lda(formula = Genus ~ Body_mass_male_mean, 
+         data = d)
+head(r)
+```
+
