--- a/AN597_GroupProject_LLMC_Final.Rmd
+++ b/AN597_GroupProject_LLMC_Final.Rmd
@@ -159,8 +159,26 @@ ggplot(newdata.3) + geom_point(aes(lda.LD1, lda.LD2, colour = Family), size = 2.
 So with all of these variables, we are able to say that body mass and brain size can describe Cebidae out of these three families, but not the other two because they are too similar. 
 ## Quadratic Discriminant Analysis (QDA)
 
-Just like ANOVA, Linear Discriminant Analyses assumes equal variance between our input variables. If the data fails to meet this criteria, observation are more likely to be assigned to the class showing the greatest variability. This type of bias error is the reason the Quadratic Discriminant Analysis (QDA) was invented.
-(Insert info and pics in google drive)
+Just like ANOVA, Linear Discriminant Analyses (LDA) assumes equal variance between our input variables. If the data fails to meet this criteria, observation are more likely to be assigned to the class showing the greatest variability. This type of bias error is the reason the Quadratic Discriminant Analysis (QDA) was invented. In other words, *LDA* and *QDA* are both classification technique but, *QDA* is less conservative by allowing different variance matrices for different classes. Another key difference between *LDA* and *QDA* is that the former assigns a linear classification decision boundary while the later leads to a quadratic decision boundary.
+
+<img src = "https://scikit-learn.org/dev/_images/sphx_glr_plot_lda_qda_0011.png">
+
+
+*Top row: when the covariance matrices are indeed the same in the data, LDA and QDA lead to the same decision boundaries.
+*Bottom row: when the covariance matrices are different, LDA leads to bad performance as its assumption becomes invalid, while QDA performs classification much better.
+
+Both *LDA* and *QDA* can be derived from the same probabilistic models that models the class conditional distribution of the data \[P(X|y=k)\] for each class \[k\]. *QDA* provides an alternative approach by assuming that each class has its own covariance matrix \[\Sigma_k\].
+In order to calculate the quadratic boundary we use the following equation:
+
+\[\delta_k(x) = \log \pi_k - \frac{1}{2} \log |\Sigma_k| - \frac{1}{2} (x - \mu_k)^T \Sigma_k^{-1} (x - \mu_k)\]
+
+* **δ** is the discriminant score for class **k**
+* **X** is the matrix of independent variables
+* **μ** is a vector containing the means of each variable for class **k**
+* **Σ** is the covariance matrix of the variables (assumed to be the same for all classes)
+* **π** is the prior probability that an observation belongs to class **k**
+
+Let do a little exercise to see how *QDA* can be applied to our simplified Kamilar and Cooper dataset and how it differs from *LDA*.
 
 Packages we need: 
 ```{r}
