--- a/AN597_GroupProject_LLMC_Final.Rmd
+++ b/AN597_GroupProject_LLMC_Final.Rmd
@@ -168,7 +168,7 @@ Just like ANOVA, Linear Discriminant Analyses(LDA) assumes equal variance betwee
 *Top row: when the covariance matrices are indeed the same in the data, LDA and QDA lead to the same decision boundaries.
 *Bottom row: when the covariance matrices are different, LDA leads to bad performance as its assumption becomes invalid, while QDA performs classification much better.
 
-Both *LDA* and *QDA* can be derived from the same probabilistic models that models the class conditional distribution of the data \[P(X|y=k)\] for each class \[k\]. *QDA* provides an alternative approach by assuming that each class has its own covariance matrix \[\Sigma_k\].
+Both *LDA* and *QDA* can be derived from the same probabilistic models that models the class conditional distribution of the data $P(X|y=k)$ for each class $k$. *QDA* provides an alternative approach by assuming that each class has its own covariance matrix $\Sigma_k$.
 In order to calculate the quadratic boundary we use the following equation:
 
 \[\delta_k(x) = \log \pi_k - \frac{1}{2} \log |\Sigma_k| - \frac{1}{2} (x - \mu_k)^T \Sigma_k^{-1} (x - \mu_k)\]
