--- a/AN597_GroupProject_LLMC_Final.Rmd
+++ b/AN597_GroupProject_LLMC_Final.Rmd
@@ -202,13 +202,16 @@ d <- read.csv(f, header = TRUE, sep = ",", stringsAsFactors = TRUE)
 ```
 
 Now lets take a more expansive look at our data to see if our other variables differ between groups. 
+
 ```{r}
 plot(d$Family, d$Body_mass_female_mean, main = "Mean Female Body Mass", ylab = "Body Mass (g)")
 plot(d$Family, d$Brain_Size_Species_Mean, main = "Mean Species Brain Size", ylab = "Brain Size (g)")
 plot(d$Family, d$Brain_Size_Female_Mean, main = "Mean Female Brain Size", ylab = "Brain Size (g)")
 plot(d$Family, d$Mass_Dimorphism, main = "Sexual Dimorphism in Mass", ylab = "Sexual Dimorphism")
 ```
+
 Another way we can visualize the variation in our data is by using the scatterplotMatrix() wrapper function from the *car* package.
+
 ```{r}
 scatterplotMatrix(~ Body_mass_male_mean + Body_mass_female_mean + Brain_Size_Species_Mean + Brain_Size_Female_Mean + Mass_Dimorphism| Family, data=d,legend = TRUE,smooth = list(method=gamLine),diagonal = TRUE,plot.points = TRUE)
 ```
@@ -223,25 +226,29 @@ kamcoop.qda
 #QDA Partition Plots
 
 Next we can use the partimat() function from the *klaR* package which allows us to plot the results of the *QDA*. This will create a figure for every possible combination of two variables from our data. 
+
 ```{r}
 partimat(Family ~ Body_mass_male_mean + Body_mass_female_mean + Brain_Size_Species_Mean + Brain_Size_Female_Mean + Mass_Dimorphism, data = d, method="qda")
 ```
+
 Think of each of these plots as a different prespective on our data. The different colored regions outline each classification area. Observation that falls within a region is predicted to be from a specific class. The apparent error rate at the top of each figure imforms us about how many observations fall outside their predicted range.
 
 #QDA Predictions
 
 The predict function works identically to the way we used it for *LDA*. We will again use this function to create a confusion matrix for our data.
+
 ```{r}
 qda.predict <- predict(kamcoop.qda)
 qda.predict
 ```
+
 This doesn't tell us much. Let's create a matrix like we did with *LDA*.
+
 ```{r}
 qda.predict.class <- predict(kamcoop.qda,
                        newdata=d[,c(5,6,7,8,9)]
-                       )$class #find prediction values of class
-qda.predict.class #gives the classifications that are in the predictions
-#determine how well the model fits by comparing predictions to 
+                       )$class
+qda.predict.class
 table(qda.predict.class, d[,2])
 ``` 
 
@@ -254,45 +261,41 @@ Removing Mass_Dimorphism:
 kamcoop.qda1 <- qda(Family ~ Body_mass_male_mean + Body_mass_female_mean + Brain_Size_Species_Mean + Brain_Size_Female_Mean, data = d) 
 qda.predict.class1 <- predict(kamcoop.qda1,
                        newdata=d[,c(5,6,7,8)]
-                       )$class #find prediction values of class
-qda.predict.class1 #gives the classifications that are in the predictions
-#determine how well the model fits by comparing predictions to 
+                       )$class
+qda.predict.class1
 table(qda.predict.class1, d[,2])
 ``` 
 Still looking good!
 
-Now lets try without Mass_Dimorphism and Brain_Size_Female_Mean.
+Now lets try without Mass_Dimorphism and Brain_Size_Female_Mean:
 ```{r}
 kamcoop.qda2 <- qda(Family ~ Body_mass_male_mean + Body_mass_female_mean + Brain_Size_Species_Mean, data = d) 
 qda.predict.class2 <- predict(kamcoop.qda2,
                        newdata=d[,c(5,7,8)]
-                       )$class #find prediction values of class
-qda.predict.class2 #gives the classifications that are in the predictions
-#determine how well the model fits by comparing predictions to 
+                       )$class
+qda.predict.class2
 table(qda.predict.class2, d[,2])
 ``` 
 Still 100%
 
-Now we try with just Male and Female body mass.
+Now we try with just Male and Female body mass:
 ```{r}
 kamcoop.qda3 <- qda(Family ~ Body_mass_male_mean + Body_mass_female_mean, data = d) 
 qda.predict.class3 <- predict(kamcoop.qda3,
                        newdata=d[,c(7,8)]
-                       )$class #find prediction values of class
-qda.predict.class3 #gives the classifications that are in the predictions
-#determine how well the model fits by comparing predictions to 
+                       )$class
+qda.predict.class3
 table(qda.predict.class3, d[,2])
 ```
 And now we see we are starting to lose accuracy.
 
-One more combo just for the sake of being thorough without body mas or sexual dimorphism.
+One more combo just for the sake of being thorough without body mas or sexual dimorphism:
 ```{r}
 kamcoop.qda4 <- qda(Family ~ Brain_Size_Species_Mean + Brain_Size_Female_Mean, data = d) 
 qda.predict.class4 <- predict(kamcoop.qda4,
                        newdata=d[,c(5,6)]
-                       )$class #find prediction values of class
-qda.predict.class4 #gives the classifications that are in the predictions
-#determine how well the model fits by comparing predictions to 
+                       )$class
+qda.predict.class4
 table(qda.predict.class4, d[,2])
 ```
 Not very good!
